[gd_scene load_steps=125 format=3 uid="uid://cyasf8uqqf0sr"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_he1mc"]
[ext_resource type="Texture2D" uid="uid://bi84hbv2x30va" path="res://assets/PlayerSprite.png" id="1_wgehw"]
[ext_resource type="Script" path="res://scripts/ray_cast_2d.gd" id="3_py6d3"]
[ext_resource type="Script" path="res://scripts/health_bar.gd" id="4_4boe0"]
[ext_resource type="FontFile" uid="uid://d32kytgakur35" path="res://assets/Fonts/Minecraft.ttf" id="5_hxp3d"]

[sub_resource type="AtlasTexture" id="AtlasTexture_iy846"]
atlas = ExtResource("1_wgehw")
region = Rect2(2, 130, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_656c5"]
atlas = ExtResource("1_wgehw")
region = Rect2(66, 130, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndb8n"]
atlas = ExtResource("1_wgehw")
region = Rect2(130, 130, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_8b70a"]
atlas = ExtResource("1_wgehw")
region = Rect2(194, 130, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_tw6mr"]
atlas = ExtResource("1_wgehw")
region = Rect2(258, 130, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4bgo"]
atlas = ExtResource("1_wgehw")
region = Rect2(322, 130, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubeul"]
atlas = ExtResource("1_wgehw")
region = Rect2(386, 130, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcktw"]
atlas = ExtResource("1_wgehw")
region = Rect2(2, 1410, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ypk0"]
atlas = ExtResource("1_wgehw")
region = Rect2(66, 1410, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_hd72s"]
atlas = ExtResource("1_wgehw")
region = Rect2(2, 1538, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_hmhdw"]
atlas = ExtResource("1_wgehw")
region = Rect2(66, 1538, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_fidi8"]
atlas = ExtResource("1_wgehw")
region = Rect2(2, 1474, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjgxv"]
atlas = ExtResource("1_wgehw")
region = Rect2(66, 1474, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_yofta"]
atlas = ExtResource("1_wgehw")
region = Rect2(2, 1602, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_10amu"]
atlas = ExtResource("1_wgehw")
region = Rect2(66, 1602, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_51lxx"]
atlas = ExtResource("1_wgehw")
region = Rect2(2, 258, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_eyx41"]
atlas = ExtResource("1_wgehw")
region = Rect2(66, 258, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_prgfx"]
atlas = ExtResource("1_wgehw")
region = Rect2(130, 258, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2g3u"]
atlas = ExtResource("1_wgehw")
region = Rect2(194, 258, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ty62"]
atlas = ExtResource("1_wgehw")
region = Rect2(258, 258, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_4qysj"]
atlas = ExtResource("1_wgehw")
region = Rect2(322, 258, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_yag0x"]
atlas = ExtResource("1_wgehw")
region = Rect2(386, 258, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhbmo"]
atlas = ExtResource("1_wgehw")
region = Rect2(450, 258, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_lebaf"]
atlas = ExtResource("1_wgehw")
region = Rect2(2, 386, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8blj"]
atlas = ExtResource("1_wgehw")
region = Rect2(66, 386, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_7sxch"]
atlas = ExtResource("1_wgehw")
region = Rect2(130, 386, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_d47o4"]
atlas = ExtResource("1_wgehw")
region = Rect2(194, 386, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_lwnho"]
atlas = ExtResource("1_wgehw")
region = Rect2(258, 386, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_olqne"]
atlas = ExtResource("1_wgehw")
region = Rect2(322, 386, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_cepmj"]
atlas = ExtResource("1_wgehw")
region = Rect2(386, 386, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_gkn8e"]
atlas = ExtResource("1_wgehw")
region = Rect2(450, 386, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mhyi"]
atlas = ExtResource("1_wgehw")
region = Rect2(2, 322, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgv8r"]
atlas = ExtResource("1_wgehw")
region = Rect2(66, 322, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_67ww1"]
atlas = ExtResource("1_wgehw")
region = Rect2(130, 322, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6cbl"]
atlas = ExtResource("1_wgehw")
region = Rect2(194, 322, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_rf55y"]
atlas = ExtResource("1_wgehw")
region = Rect2(258, 322, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_vr3if"]
atlas = ExtResource("1_wgehw")
region = Rect2(322, 322, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xwhb"]
atlas = ExtResource("1_wgehw")
region = Rect2(386, 322, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_mr433"]
atlas = ExtResource("1_wgehw")
region = Rect2(450, 322, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_2l385"]
atlas = ExtResource("1_wgehw")
region = Rect2(2, 450, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6e6x"]
atlas = ExtResource("1_wgehw")
region = Rect2(66, 450, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_idqvf"]
atlas = ExtResource("1_wgehw")
region = Rect2(130, 450, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_gh8by"]
atlas = ExtResource("1_wgehw")
region = Rect2(194, 450, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfk66"]
atlas = ExtResource("1_wgehw")
region = Rect2(258, 450, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_cq2pg"]
atlas = ExtResource("1_wgehw")
region = Rect2(322, 450, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_tg78c"]
atlas = ExtResource("1_wgehw")
region = Rect2(386, 450, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_1cfn1"]
atlas = ExtResource("1_wgehw")
region = Rect2(450, 450, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_640xe"]
atlas = ExtResource("1_wgehw")
region = Rect2(2, 2178, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_08fv1"]
atlas = ExtResource("1_wgehw")
region = Rect2(66, 2178, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5yd8"]
atlas = ExtResource("1_wgehw")
region = Rect2(130, 2178, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_xtr5h"]
atlas = ExtResource("1_wgehw")
region = Rect2(194, 2178, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_pi3y0"]
atlas = ExtResource("1_wgehw")
region = Rect2(258, 2178, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_vb07s"]
atlas = ExtResource("1_wgehw")
region = Rect2(322, 2178, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqf3r"]
atlas = ExtResource("1_wgehw")
region = Rect2(386, 2178, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_0n3ud"]
atlas = ExtResource("1_wgehw")
region = Rect2(450, 2178, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_1c0td"]
atlas = ExtResource("1_wgehw")
region = Rect2(2, 2306, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_bxqqw"]
atlas = ExtResource("1_wgehw")
region = Rect2(66, 2306, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ynr4"]
atlas = ExtResource("1_wgehw")
region = Rect2(130, 2306, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqdj6"]
atlas = ExtResource("1_wgehw")
region = Rect2(194, 2306, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_5h53c"]
atlas = ExtResource("1_wgehw")
region = Rect2(258, 2306, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_lj681"]
atlas = ExtResource("1_wgehw")
region = Rect2(322, 2306, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_2bjam"]
atlas = ExtResource("1_wgehw")
region = Rect2(386, 2306, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jyal"]
atlas = ExtResource("1_wgehw")
region = Rect2(450, 2306, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_17m3t"]
atlas = ExtResource("1_wgehw")
region = Rect2(2, 2242, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1fao"]
atlas = ExtResource("1_wgehw")
region = Rect2(66, 2242, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_hpmjn"]
atlas = ExtResource("1_wgehw")
region = Rect2(130, 2242, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_07sec"]
atlas = ExtResource("1_wgehw")
region = Rect2(194, 2242, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_outxo"]
atlas = ExtResource("1_wgehw")
region = Rect2(258, 2242, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfuub"]
atlas = ExtResource("1_wgehw")
region = Rect2(322, 2242, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4hbr"]
atlas = ExtResource("1_wgehw")
region = Rect2(386, 2242, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_sgk7y"]
atlas = ExtResource("1_wgehw")
region = Rect2(450, 2242, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_odeeb"]
atlas = ExtResource("1_wgehw")
region = Rect2(2, 2370, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_vw7g1"]
atlas = ExtResource("1_wgehw")
region = Rect2(66, 2370, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrs0c"]
atlas = ExtResource("1_wgehw")
region = Rect2(130, 2370, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_7w4k6"]
atlas = ExtResource("1_wgehw")
region = Rect2(194, 2370, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ggmy"]
atlas = ExtResource("1_wgehw")
region = Rect2(258, 2370, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_kf1av"]
atlas = ExtResource("1_wgehw")
region = Rect2(322, 2370, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_yoknk"]
atlas = ExtResource("1_wgehw")
region = Rect2(386, 2370, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0bkx"]
atlas = ExtResource("1_wgehw")
region = Rect2(450, 2370, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ss55"]
atlas = ExtResource("1_wgehw")
region = Rect2(258, 1538, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_pl7f2"]
atlas = ExtResource("1_wgehw")
region = Rect2(322, 1538, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_21als"]
atlas = ExtResource("1_wgehw")
region = Rect2(65, 513, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkkjk"]
atlas = ExtResource("1_wgehw")
region = Rect2(129, 513, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ddoj"]
atlas = ExtResource("1_wgehw")
region = Rect2(193, 513, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qfm8"]
atlas = ExtResource("1_wgehw")
region = Rect2(257, 513, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_4l5ud"]
atlas = ExtResource("1_wgehw")
region = Rect2(321, 513, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_kay3j"]
atlas = ExtResource("1_wgehw")
region = Rect2(385, 513, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lcnw"]
atlas = ExtResource("1_wgehw")
region = Rect2(449, 513, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4kq5"]
atlas = ExtResource("1_wgehw")
region = Rect2(513, 513, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_ycstm"]
atlas = ExtResource("1_wgehw")
region = Rect2(65, 641, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_ea2gn"]
atlas = ExtResource("1_wgehw")
region = Rect2(129, 641, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_mla6x"]
atlas = ExtResource("1_wgehw")
region = Rect2(193, 641, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_y1m24"]
atlas = ExtResource("1_wgehw")
region = Rect2(257, 641, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_01wab"]
atlas = ExtResource("1_wgehw")
region = Rect2(321, 641, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_wcmqp"]
atlas = ExtResource("1_wgehw")
region = Rect2(385, 641, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_qacs2"]
atlas = ExtResource("1_wgehw")
region = Rect2(449, 641, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_5uf1p"]
atlas = ExtResource("1_wgehw")
region = Rect2(513, 641, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_qp8kl"]
atlas = ExtResource("1_wgehw")
region = Rect2(65, 577, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3ccx"]
atlas = ExtResource("1_wgehw")
region = Rect2(129, 577, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0qmc"]
atlas = ExtResource("1_wgehw")
region = Rect2(193, 577, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6k2a"]
atlas = ExtResource("1_wgehw")
region = Rect2(257, 577, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1whw"]
atlas = ExtResource("1_wgehw")
region = Rect2(321, 577, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8b04"]
atlas = ExtResource("1_wgehw")
region = Rect2(385, 577, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_pq8uf"]
atlas = ExtResource("1_wgehw")
region = Rect2(449, 577, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkvnn"]
atlas = ExtResource("1_wgehw")
region = Rect2(513, 577, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_sgibu"]
atlas = ExtResource("1_wgehw")
region = Rect2(65, 705, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_15x2l"]
atlas = ExtResource("1_wgehw")
region = Rect2(129, 705, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_xkjao"]
atlas = ExtResource("1_wgehw")
region = Rect2(193, 705, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4ggn"]
atlas = ExtResource("1_wgehw")
region = Rect2(257, 705, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7teh"]
atlas = ExtResource("1_wgehw")
region = Rect2(321, 705, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1k1y"]
atlas = ExtResource("1_wgehw")
region = Rect2(385, 705, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_jptdl"]
atlas = ExtResource("1_wgehw")
region = Rect2(449, 705, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_fulsw"]
atlas = ExtResource("1_wgehw")
region = Rect2(513, 705, 62, 62)

[sub_resource type="SpriteFrames" id="SpriteFrames_5v1n3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iy846")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_656c5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndb8n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8b70a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tw6mr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4bgo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubeul")
}],
"loop": false,
"name": &"emote_one",
"speed": 5.0
}, {
"frames": [],
"loop": false,
"name": &"emote_two",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcktw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ypk0")
}],
"loop": true,
"name": &"idle_back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hd72s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hmhdw")
}],
"loop": true,
"name": &"idle_front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fidi8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjgxv")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yofta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10amu")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_51lxx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eyx41")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_prgfx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2g3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ty62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4qysj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yag0x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhbmo")
}],
"loop": false,
"name": &"interact_back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lebaf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8blj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7sxch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d47o4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lwnho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_olqne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cepmj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gkn8e")
}],
"loop": false,
"name": &"interact_front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mhyi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgv8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_67ww1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6cbl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rf55y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vr3if")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xwhb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mr433")
}],
"loop": false,
"name": &"interact_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2l385")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6e6x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_idqvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gh8by")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfk66")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cq2pg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tg78c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1cfn1")
}],
"loop": false,
"name": &"interact_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_640xe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08fv1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5yd8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtr5h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pi3y0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vb07s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqf3r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0n3ud")
}],
"loop": true,
"name": &"run_back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1c0td")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxqqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ynr4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sqdj6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5h53c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lj681")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2bjam")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jyal")
}],
"loop": true,
"name": &"run_front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_17m3t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1fao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hpmjn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_07sec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_outxo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfuub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4hbr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgk7y")
}],
"loop": true,
"name": &"run_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_odeeb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vw7g1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrs0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7w4k6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ggmy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kf1av")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yoknk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0bkx")
}],
"loop": true,
"name": &"run_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ss55")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pl7f2")
}],
"loop": true,
"name": &"sleep",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_21als")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkkjk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ddoj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qfm8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4l5ud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kay3j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lcnw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4kq5")
}],
"loop": true,
"name": &"walk_back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycstm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ea2gn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mla6x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1m24")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_01wab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wcmqp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qacs2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5uf1p")
}],
"loop": true,
"name": &"walk_front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qp8kl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3ccx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0qmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6k2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1whw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8b04")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pq8uf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkvnn")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgibu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_15x2l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xkjao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4ggn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7teh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1k1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jptdl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fulsw")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vxfhy"]
size = Vector2(30, 15)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_86m6p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xmojs"]
bg_color = Color(1, 0.548798, 0.484859, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lxfad"]
size = Vector2(30, 15)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_awohk"]
bg_color = Color(0.498039, 1, 1, 0.192157)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Player" type="CharacterBody2D" groups=["player"]]
z_index = 2
y_sort_enabled = true
collision_mask = 7
script = ExtResource("1_he1mc")

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(0, -15)
collision_mask = 6
collide_with_areas = true
script = ExtResource("3_py6d3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(0, -30)
sprite_frames = SubResource("SpriteFrames_5v1n3")
animation = &"idle_left"
autoplay = "idle_front"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_vxfhy")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="HealthBar" type="ProgressBar" parent="."]
z_index = 2
offset_left = -15.0
offset_top = -51.0
offset_right = 15.0
offset_bottom = -47.0
theme_override_styles/background = SubResource("StyleBoxEmpty_86m6p")
theme_override_styles/fill = SubResource("StyleBoxFlat_xmojs")
max_value = 3.0
step = 1.0
value = 3.0
show_percentage = false
script = ExtResource("4_4boe0")

[node name="Damage_Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_lxfad")

[node name="kp_container" type="HBoxContainer" parent="."]
z_index = 10
custom_minimum_size = Vector2(32, 16)
offset_left = -286.0
offset_top = -160.0
offset_right = -254.0
offset_bottom = -144.0

[node name="kp_panel" type="Panel" parent="kp_container"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_awohk")

[node name="MarginContainer" type="MarginContainer" parent="kp_container/kp_panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 2.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="kp_container/kp_panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.55261, 0.837715, 0.855524, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.588235)
theme_override_fonts/font = ExtResource("5_hxp3d")
theme_override_font_sizes/font_size = 12

[connection signal="timeout" from="Damage_Timer" to="." method="_on_damage_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
